v0.5.0 20131109
  Add additional SMTP parameters
v0.4.0 20131009
  Add support for outbound SMTP auth and TLS
  Ensure no MTAs present
v0.3.0:
  Limit to IPV4 only
v0.2.0:
  Initial public release