@@ -8,11 +8,6 @@ describe 'postfix', :type => :class do
   it { should contain_class('postfix::config') }
   it { should contain_class('postfix::service') }
 
-  context 'monitoring' do
-    let(:params) { { :monitoring => 'sensu' } }
-    it { should include_class('postfix::monitoring::sensu') }
-  end
-
   context 'logging' do
     let(:params) { { :logging => 'beaver' } }
     it { should include_class('postfix::logging::beaver') }
