@@ -1,3 +1,4 @@
+  Remove monitoring from module
 v0.5.0 20131109
   Add additional SMTP parameters
 v0.4.0 20131009
